# StateVectorAI

./: .gitignore  AGENTS.md  DATA.md  GPU_QUEUE.md  GPU_SETUP.md  IDEAS.md  LOOP.md  PLANS.md  QLLM Portal.bat  README.md  RESULTS.md  STATE.md  Setup GPU WSL.bat  Setup QLLM GPU in WSL.bat  Setup QLLM Portal.bat  Start QLLM GPU Portal.bat  loop-budget.md  loop-constraints.md  loop-run-log.md  pyproject.toml  requirements-cpu.txt  requirements-gpu-wsl.txt  requirements-mps.txt  requirements.txt
.claude/: settings.json
.codex/: config.toml  hooks.json
.github/: dependabot.yml  pull_request_template.md
benchmarks/: AGENTS.md  ablation.py  advantage_probe.py  contextual_sweep.py  data_screen.py  interference_head_probe.py  interference_probe.py  memory_sweep.py  model_report.py  planted_qrnn.py  plot_contextual.py  plot_separation.py  plot_suite.py  qnlp_suite.py  qrnn_landscape.py  recurrent_floor.py  resonance_search.py  scaling_probe.py  seq_interference_probe.py  two_stream_probe.py  weight_transplant.py
configs/: AGENTS.md  classical_small.yaml  ising_markov_sharp.yaml  ising_sharp.yaml  quantum_attn_4q.yaml  quantum_ffn_4q.yaml  quantum_ffn_sharp.yaml
docs/: AGENTS.md  AGENT_OPERATING_MODEL.md  ATLAS_ONTOLOGY.yaml  BACKEND_AUDIT.md  BUILD_COORDINATION.md  CODEX_PLAYBOOK.md  COMPLETION_AUDIT.md  DEVELOPMENT.md  ENHANCEMENT_PLAN.md  FEATURE_UPGRADES.md  RESEARCHER_GUIDE.md  RESEARCH_MAP.yaml  RESEARCH_PROGRAM.md  SESSION_HANDOFF_2026-07-14.md  UI_REDESIGN_PLAN.md  UI_UPGRADE_PLAN.md  safety.md
patterns/: registry.yaml
qllm/: AGENTS.md  __init__.py  claims.py  config.py  evaluation.py  evaluation_contextual.py  problems.py  registry.py  research_ledger.py  research_protocol.py  research_service.py  resources.py  resultsdb.py  tracking.py
research/: claims.yaml
scripts/: check_agent_setup.py  check_dependency_profiles.py  check_gpu.py  compare_runs.py  dump_openapi.py  launch_portal.py  local_git_scribe.py  queue_smoke.py  setup_portal.py  setup_wsl_gpu.sh  train.py  verify_changes.py
tests/: AGENTS.md  (+46 more)
(+227 files in other folders)
